Mise à jour de l'API avec les derniers correctifs